--- a/Example.ipynb
+++ b/Example.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from main import extract, run"
+    "from main import run"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -27,11 +27,7 @@
       "6 - Furto de Veículo\n",
       "7 - Roubo de Veículo\n",
       "8 - Furto de Celular\n",
-      "9 - Roubo de Celular\n",
-      "Escolha a opção: 2\n",
-      "Informe o ano  ( 2003 - 2018 ): 2015\n",
-      "Informe o mês ( 1 - 10 ): 12\n",
-      "Extracting\n"
+      "9 - Roubo de Celular\n"
      ]
     }
    ],
