--- a/Example.ipynb
+++ b/Example.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -31,20 +31,17 @@
       "Escolha a opção: 1\n",
       "Informe o ano  ( 2003 - 2018 ): 2018\n",
       "Informe o mês ( 1 - 12 ): 1\n",
-      "ctl00$cphBody$lkMes1\n",
-      "ctl00$cphBody$lkAno18\n",
-      "ctl00$cphBody$btnHomicicio\n",
       "Extracting\n"
      ]
     }
    ],
    "source": [
-    "df = run(True)"
+    "df = run(write_to_disk=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1940,7 @@
        "[902 rows x 52 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
